Fixed bug #3931
Removed the "overflow: hidden" from the .App_content style in Apps.scss so that any overlays do not get cropped when opened.

Bug Fix #3931

--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -5,7 +5,7 @@
 
 .App__content {
   margin-top: 1rem;
-  overflow: hidden;
+  //overflow: hidden;
   margin-bottom: 60px;
   padding-bottom: 30px;
  
